@@ -1,4 +1,4 @@
-.\" RCSid "$Id: pcond.1,v 1.4 2008/11/10 19:08:17 greg Exp $"
+.\" RCSid "$Id: pcond.1,v 1.5 2021/04/07 21:13:52 greg Exp $"
 .TH PCOND 1 10/27/98 RADIANCE
 .SH NAME
 pcond - condition a RADIANCE picture for output
@@ -135,7 +135,7 @@ The default value is 100 cd/m^2.
 .BI -d \ Lddyn
 Specifies the dynamic range for the target output device, which is
 the ratio of the maximum and minimum usable display luminances.
-The default value is 32.
+The default value is 100.
 .TP
 .BI -p " xr yr xg yg xb yb xw yw"
 Specifies the RGB primaries for the target output device.
