@@ -1,4 +1,4 @@
-/* RCSid $Id: tmprivat.h,v 3.24 2011/05/20 02:06:38 greg Exp $ */
+/* RCSid $Id: tmprivat.h,v 3.25 2021/04/07 21:13:52 greg Exp $ */
 /*
  * Private header file for tone mapping routines.
  */
@@ -26,7 +26,7 @@ extern "C" {
 #define	MINGAM		0.75
 #define DEFGAM		2.2
 #define	MINLDDYN	2.
-#define DEFLDDYN	32.
+#define DEFLDDYN	100.
 #define	MINLDMAX	1.
 #define	DEFLDMAX	100.
 
